# runpod-qwen-v2

./: Dockerfile  Dockerfile.model  pyproject.toml
src/: rp_handler_v2.py
