[project]
name = "qwen-image"
version = "0.1.0"
description = "RunPod for Qwen Image model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers",
    "nunchaku",
    "runpod>=1.7.13",
]

[tool.uv.sources]
nunchaku = { url = "https://github.com/nunchaku-tech/nunchaku/releases/download/v1.0.2/nunchaku-1.0.2+torch2.10-cp310-cp310-linux_x86_64.whl" }
diffusers = { git = "https://github.com/huggingface/diffusers" }
